--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -1,6 +1,10 @@
 .first-screen {
     height: 1080px;
     position: relative;
+    
+    // position: absolute;
+    // top:0;
+    // left:0;    
 
     .rectangle-with-bg {
         width: 481px;
@@ -136,4 +140,42 @@
         letter-spacing: 2.8px;
         text-transform: uppercase;
     }
+}
+
+.second-screen{
+    height: 1188px;
+    position: relative;
+    padding: 120px;
+
+
+    // .empty-block{
+    //     height:120px;
+    //     background: #777;
+    // }
+
+    .main-profile{
+        background: #afc0c0;
+        position: relative;
+    }
+    
+
+    .slider-left{
+        width: 649px;
+        height: 948px;
+        background: #051d1d;
+        
+    }
+
+    .profile-center{
+        width: 991px;
+        height: 948px;
+        background: #d6dddd;  
+    }
+
+    .profile-menu{
+        left:166px;
+        top:91px;
+
+    }
+
 }
