--- a/css/_normalize.scss
+++ b/css/_normalize.scss
@@ -8,6 +8,11 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+*{
+  padding: 0;
+  margin:0;
+}
+
  html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
@@ -22,6 +27,7 @@
   
   body {
     margin: 0;
+    
   }
   
   /**
