--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -2,10 +2,6 @@
     height: 1080px;
     position: relative;
     
-    // position: absolute;
-    // top:0;
-    // left:0;    
-
     .rectangle-with-bg {
         width: 481px;
         height: 811px;
@@ -32,6 +28,7 @@
     .person-info {
         color: $primary-color;
         position: absolute;
+        // position: relative;
         top: 50%;
         transform: translateY(-50%);
         left: 50%;
@@ -133,8 +130,11 @@
         position: absolute;
         left: 0;
         bottom: 0;
-        line-height: 90px;
-        text-align: center;
+        display:flex;
+        justify-content: space-around;
+        align-items: center;
+        // line-height: 90px;
+        // text-align: center;
         color: #87bbbc;
         font-size: 14px;
         letter-spacing: 2.8px;
@@ -145,37 +145,77 @@
 .second-screen{
     height: 1188px;
     position: relative;
+    background: #e0f8f8;
     padding: 120px;
 
 
-    // .empty-block{
-    //     height:120px;
-    //     background: #777;
-    // }
-
     .main-profile{
-        background: #afc0c0;
         position: relative;
+        background: #afc0c0;
+        
+        
+        
     }
     
 
-    .slider-left{
-        width: 649px;
-        height: 948px;
+    .profile-left{
+        flex:1;
+        position: relative;
+        // max-width: 649px;
+        height: 100%;
         background: #051d1d;
+        opacity: 0.5;
         
     }
 
-    .profile-center{
-        width: 991px;
-        height: 948px;
+    .profile-right{
+        flex:1 1 40%;
+        position:relative;
+        // position: absolute;
+        // top:0;
+        // left:840;
+        
+        // width:480px;
+        height:100%;
+        flex-direction: column;
+        justify-content: space-around;
         background: #d6dddd;  
     }
 
-    .profile-menu{
-        left:166px;
-        top:91px;
-
+    .icon-bar{
+        flex:1;
     }
+    .profile-menu-list{
+        list-style: none;
+        position:relative;
+        justify-content: space-between;
+        background: #d6dddd;  
+    }
+    
+    
+
+    
+    .profile-menu-item{
+        flex:1;
+        // display:block;
+        line-height:9px;
+
+        
+    }
+    .profile-title{
+        flex:1;
+    }
+
+    .profile-text{
+        flex:1;
+    }
+
+}
+
+.third-screen{
+    height: 200px;
+    position: relative;
+    background: #2b9696;
+    padding: 120px;
 
 }
