--- a/css/site.css
+++ b/css/site.css
@@ -600,8 +600,8 @@ header .search-controls .button-close i {
 
 .second-screen .profile-left {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
   position: relative;
   height: 100%;
   background: #051d1d;
@@ -610,9 +610,10 @@ header .search-controls .button-close i {
 
 .second-screen .profile-right {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 40%;
-          flex: 1 1 40%;
+      -ms-flex: 1 1;
+          flex: 1 1;
   position: relative;
+  left: 50%;
   height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -623,10 +624,28 @@ header .search-controls .button-close i {
   background: #d6dddd;
 }
 
+.second-screen .profile-center {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+}
+
 .second-screen .icon-bar {
+  position: relative;
+  top: 50%;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.second-screen .icons-list {
+  list-style: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .second-screen .profile-menu-list {
