--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -152,6 +152,7 @@
     .main-profile{
         position: relative;
         background: #afc0c0;
+        justify-content: space-between;
         
         
         
