--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -1,5 +1,6 @@
 .first-screen {
-    height: 1080px;
+    height: 100vh;
+    // height: 1080px;
     position: relative;
     
     .rectangle-with-bg {
@@ -12,15 +13,18 @@
     }
 
     .main-content {
-        width: 1800px;
-        height: 810px;
+        width:94vw;
+        max-width: 1800px;
+        height:75vh;
+        max-height: 810px;
         position: absolute;
         left: 0;
         bottom: 0;
     }
 
     .slider-meta {
-        width: 480px;
+        width:25vw;
+        max-width: 480px;
         height: 100%;
         position: relative;
     }
@@ -36,7 +40,8 @@
     }
 
     .person-name {
-        font-size: 101px;
+        // font-size: 101px;
+        font-size:10.5vh;
         letter-spacing: 2px;
         margin: 0;
     }
@@ -143,16 +148,22 @@
 }
 
 .second-screen{
+    width:100%;
     height: 1188px;
     position: relative;
-    background: #e0f8f8;
-    padding: 120px;
+        
+    
 
 
-    .main-profile{
+    .main-container{
+        // width: 1680px;
+        height: 948px;
         position: relative;
-        background: #afc0c0;
-        justify-content: space-between;
+        background: #ecb9a5;
+        // justify-content: flex-start;
+        // flex-flow: row nowrap;
+        padding: 120px;
+        // box-sizing:border-box;
         
         
         
@@ -160,48 +171,71 @@
     
 
     .profile-left{
-        flex:1 1;
+        flex:1;
         position: relative;
         height: 100%;
-        background: #051d1d;
-        opacity: 0.5;
+        // background: #6369b4;
+        // opacity: 0.5;
         
+    }
+    .profile-slider{
+        width:649px;
+        height: 100%;
+        position: relative;
+        background: #e2e8e8;
     }
 
     .profile-right{
-        flex:1 1;
+        flex:1;
         position:relative;
-        left:50%;
         height:100%;
-        flex-direction: column;
-        justify-content: space-around;
-        background: #d6dddd;  
+        justify-content: flex-start;
+        background: #b1ecc3; 
+        opacity: 0.5; 
     }
 
     .profile-center{
-        flex:1 1;
+        flex:0 0 90%;
+        flex-direction: column;
+        position: relative;
+        height:100%;
+        background: #eed6d6;
+        align-items: flex-start;
+        // justify-content: space-between;
     }
 
     .icon-bar{
         position: relative;
-        top:50%;
-        flex:1;
+        flex:0 0 10%;
+        flex-flow: column nowrap;
+        background: rgb(75, 75, 41);
+    
     }
-
     .icons-list{
+        position: absolute;
+        top:50%;
+        right:-2%;
+        display: flex;
         list-style: none;
         flex-direction: column;
         justify-content: space-around;
-
-        // position:absolute;
-        // top:50%;
-        // right:0;
-
+        line-height: 16px;
+        height: 180px;
+        transform: translateY(-50%);
     }
+
+    
+
+    
     .profile-menu-list{
+        padding-top:91px;
+        width: 58%;
+        flex:0 0 10%;
         list-style: none;
-        position:relative;
-        justify-content: space-between;
+        // position:relative;
+        position: absolute;
+        justify-content: flex-start;
+        align-items: flex-start;
         background: #d6dddd;  
     }
     
@@ -210,18 +244,42 @@
     
     .profile-menu-item{
         flex:1;
-        // display:block;
         line-height:9px;
+                
+    }
 
+    .profile-menu-item:first-child {
+        padding-bottom:16px;
+        padding-left:16px;
+        border-bottom: 2px solid #1a1a1d;
+        // border-left:2px solid #1a1a1d;
+      
         
     }
     .profile-title{
         flex:1;
+        width: 100%;
+        position: absolute;
+        left:0;
+        top:23%;
     }
+
+    .profile-description{
+        flex:1;
+        width: 100%
+        position: absolute;
+        left:0;
+        top:30%;
+    }
+
+
 
     .profile-text{
         flex:1;
+        max-width: 20%;
     }
+
+    
 
 
 }
