--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -156,7 +156,7 @@
 
 
     .main-container{
-        // width: 1680px;
+         // width: 1680px;
         height: 948px;
         position: relative;
         background: #ecb9a5;
@@ -171,36 +171,42 @@
     
 
     .profile-left{
-        flex:1;
+        flex:0 0 39%;
         position: relative;
         height: 100%;
+        margin-right: 7.15%;
+
         // background: #6369b4;
         // opacity: 0.5;
         
     }
     .profile-slider{
-        width:649px;
-        height: 100%;
-        position: relative;
-        background: #e2e8e8;
+        width:102px;
+        height: 12px;
+        position: absolute;
+        background: #a0b36c;
+        left:280px;
+        bottom: 30px;
     }
 
     .profile-right{
-        flex:1;
+        flex:0 0 54.23%;
+        // flex:0 0 911px;
         position:relative;
         height:100%;
         justify-content: flex-start;
+        align-items: stretch;
         background: #b1ecc3; 
         opacity: 0.5; 
     }
 
     .profile-center{
         flex:0 0 90%;
-        flex-direction: column;
+        // flex-direction: column;
         position: relative;
-        height:100%;
+        max-height:100%;
         background: #eed6d6;
-        align-items: flex-start;
+        // align-items: flex-start;
         // justify-content: space-between;
     }
 
@@ -229,14 +235,12 @@
     
     .profile-menu-list{
         padding-top:91px;
-        width: 58%;
-        flex:0 0 10%;
+        width: 53.2%;
         list-style: none;
-        // position:relative;
-        position: absolute;
-        justify-content: flex-start;
-        align-items: flex-start;
+        justify-content: space-between;
+        // align-items: 
         background: #d6dddd;  
+        // max-width: 437px;
     }
     
     
@@ -245,38 +249,37 @@
     .profile-menu-item{
         flex:1;
         line-height:9px;
+        // margin-left: 10%;
                 
     }
 
-    .profile-menu-item:first-child {
-        padding-bottom:16px;
-        padding-left:16px;
-        border-bottom: 2px solid #1a1a1d;
+    .profile-menu-item:last-child {
+        flex:1;
+        align-self: flex-end;
+        // padding-bottom:16px;
+        // padding-left:16px;
+        // border-bottom: 2px solid #1a1a1d;
         // border-left:2px solid #1a1a1d;
       
         
     }
     .profile-title{
-        flex:1;
-        width: 100%;
-        position: absolute;
-        left:0;
-        top:23%;
-    }
-
+        margin-top:18%;
+        font-size: 60px;
+        
+    }    
     .profile-description{
-        flex:1;
-        width: 100%
-        position: absolute;
-        left:0;
-        top:30%;
+        font-size: 24px;
+        margin-top: 4%;
+        max-width: 58.17%;
+        
     }
 
 
 
     .profile-text{
-        flex:1;
-        max-width: 20%;
+        margin-top: 4%;
+        max-width: 58.17%;
     }
 
     
