--- a/css/site.css
+++ b/css/site.css
@@ -612,29 +612,35 @@ span:before {
 }
 
 .second-screen .profile-left {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 39%;
+          flex: 0 0 39%;
   position: relative;
   height: 100%;
+  margin-right: 7.15%;
 }
 
 .second-screen .profile-slider {
-  width: 649px;
-  height: 100%;
-  position: relative;
-  background: #e2e8e8;
+  width: 102px;
+  height: 12px;
+  position: absolute;
+  background: #a0b36c;
+  left: 280px;
+  bottom: 30px;
 }
 
 .second-screen .profile-right {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 54.23%;
+          flex: 0 0 54.23%;
   position: relative;
   height: 100%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   background: #b1ecc3;
   opacity: 0.5;
 }
@@ -643,16 +649,9 @@ span:before {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 90%;
           flex: 0 0 90%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   position: relative;
-  height: 100%;
+  max-height: 100%;
   background: #eed6d6;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
 }
 
 .second-screen .icon-bar {
@@ -689,18 +688,11 @@ span:before {
 
 .second-screen .profile-menu-list {
   padding-top: 91px;
-  width: 58%;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 10%;
-          flex: 0 0 10%;
+  width: 53.2%;
   list-style: none;
-  position: absolute;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background: #d6dddd;
 }
 
@@ -711,34 +703,28 @@ span:before {
   line-height: 9px;
 }
 
-.second-screen .profile-menu-item:first-child {
-  padding-bottom: 16px;
-  padding-left: 16px;
-  border-bottom: 2px solid #1a1a1d;
+.second-screen .profile-menu-item:last-child {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .second-screen .profile-title {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 23%;
+  margin-top: 18%;
+  font-size: 60px;
 }
 
 .second-screen .profile-description {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  width: 100%;
+  font-size: 24px;
+  margin-top: 4%;
+  max-width: 58.17%;
 }
 
 .second-screen .profile-text {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  max-width: 20%;
+  margin-top: 4%;
+  max-width: 58.17%;
 }
 
 .third-screen {
