--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -275,7 +275,12 @@
         
     }
 
-
+    .profile-star{
+        font-size: 16px;
+        margin-top: 4%;
+        max-width: 21%;
+        
+    }
 
     .profile-text{
         margin-top: 4%;
