--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -126,7 +126,7 @@
             position: relative;
             left: 3px;
         }
-    }
+    }   
 
     .slide-title {
         width: 480px;
@@ -148,7 +148,7 @@
 }
 
 .second-screen{
-    width:100%;
+    // width:100%;
     height: 1188px;
     position: relative;
         
@@ -176,8 +176,8 @@
         height: 100%;
         margin-right: 7.15%;
 
-        // background: #6369b4;
-        // opacity: 0.5;
+        background: #6369b4;
+        opacity: 0.5;
         
     }
     .profile-slider{
@@ -256,22 +256,20 @@
     .profile-menu-item:last-child {
         flex:1;
         align-self: flex-end;
-        // padding-bottom:16px;
-        // padding-left:16px;
-        // border-bottom: 2px solid #1a1a1d;
-        // border-left:2px solid #1a1a1d;
-      
+           
         
     }
     .profile-title{
         margin-top:18%;
         font-size: 60px;
+        line-height: 79px;
         
     }    
     .profile-description{
         font-size: 24px;
         margin-top: 4%;
-        max-width: 58.17%;
+        max-width: 55%;
+        line-height: 36px;
         
     }
 
@@ -279,23 +277,113 @@
         font-size: 16px;
         margin-top: 4%;
         max-width: 21%;
+        line-height: 40px;
+        
         
     }
 
     .profile-text{
-        margin-top: 4%;
-        max-width: 58.17%;
+        margin-top: 7.43%;
+        max-width: 50%;
+        overflow: hidden;
+        max-height: 36.4%;
     }
-
     
 
 
 }
 
 .third-screen{
-    height: 200px;
-    position: relative;
+    width: 100%;
+    height: 1080px;
+    // position: relative;
     background: #2b9696;
-    padding: 120px;
+    padding-left: 120px;
+    padding-right: 120px;
+    align-items: stretch;
+
+    // .main-third{
+    // // flex-wrap: wrap;
+    // // max-width: 10%;
+    // // // padding-left: 120px;
+    // // // padding-right: 120px;
+    // // height: 100%;
+    // // justify-content: flex-start;
+    // // align-items: stretch;
+    // // // margin: 120px 120px;    
+    // // background: #a0b36c;  
+    // }
+
+    
+    
+
+
+    .third-left{
+        flex:0 0 50%; 
+        // flex:1;
+        background: #a19e75; 
+        // position: relative;
+        padding-left: 120px;
+        padding-right: 170px;
+        padding-top: 185px;
+        padding-bottom: 230px;
+        // width: 465px;
+        // height: 125px;
+        
+        // margin: 120px 185px 120px 0;
+        
+    }
+    .left-title{
+        font-size: 60px;
+        line-height: 79px;
+        font-weight: normal;
+        font-style: normal;
+
+    }
+
+    .left-hr{
+        border-bottom: 2px solid black;
+        width: 140px;
+        height: 49px;
+        // background: rgb(196, 83, 83);
+
+    }
+
+    // .left-content{
+    //     width: 465px;
+    //     height: 125px;
+    //     font-size: 48px;
+    //     line-height: 79px;
+    //     font-weight: normal;
+    //     font-style: normal;
+    //     margin: 120px 185px 120px 0;
+    //     // position: absolute;
+    //     // right: 17%;
+    //     // top: 17%;
+    //     // padding-left: 120px;
+    //     // padding-right: 170px;
+        
+    //     // height: 100%;
+        
+    //     // width:58%;
+    //     background: #b38e6c;
+    // }
+    .third-right{
+        flex:0 0 50%; 
+        // flex:1;
+        background: #b36cb3;
+        
+    }
+
+
+
+
+
+
+
+
+
+
+
 
 }
