--- a/css/site.css
+++ b/css/site.css
@@ -6,6 +6,11 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+* {
   padding: 0;
   margin: 0;
 }
@@ -599,7 +604,6 @@ span:before {
 }
 
 .second-screen {
-  width: 100%;
   height: 1188px;
   position: relative;
 }
@@ -618,6 +622,8 @@ span:before {
   position: relative;
   height: 100%;
   margin-right: 7.15%;
+  background: #6369b4;
+  opacity: 0.5;
 }
 
 .second-screen .profile-slider {
@@ -714,29 +720,69 @@ span:before {
 .second-screen .profile-title {
   margin-top: 18%;
   font-size: 60px;
+  line-height: 79px;
 }
 
 .second-screen .profile-description {
   font-size: 24px;
   margin-top: 4%;
-  max-width: 58.17%;
+  max-width: 55%;
+  line-height: 36px;
 }
 
 .second-screen .profile-star {
   font-size: 16px;
   margin-top: 4%;
   max-width: 21%;
+  line-height: 40px;
 }
 
 .second-screen .profile-text {
-  margin-top: 4%;
-  max-width: 58.17%;
+  margin-top: 7.43%;
+  max-width: 50%;
+  overflow: hidden;
+  max-height: 36.4%;
 }
 
 .third-screen {
-  height: 200px;
-  position: relative;
+  width: 100%;
+  height: 1080px;
   background: #2b9696;
-  padding: 120px;
+  padding-left: 120px;
+  padding-right: 120px;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.third-screen .third-left {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  background: #a19e75;
+  padding-left: 120px;
+  padding-right: 170px;
+  padding-top: 185px;
+  padding-bottom: 230px;
+}
+
+.third-screen .left-title {
+  font-size: 60px;
+  line-height: 79px;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.third-screen .left-hr {
+  border-bottom: 2px solid black;
+  width: 140px;
+  height: 49px;
+}
+
+.third-screen .third-right {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  background: #b36cb3;
 }
 /*# sourceMappingURL=site.css.map */
