--- a/css/_profile.scss
+++ b/css/_profile.scss
@@ -1,6 +1,7 @@
 .first-screen {
-    height: 100vh;
-    // height: 1080px;
+    // height: 100vh;
+    
+    height: 1080px;
     position: relative;
     
     .rectangle-with-bg {
@@ -151,22 +152,15 @@
     // width:100%;
     height: 1188px;
     position: relative;
+    padding: 120px;
         
     
 
 
     .main-container{
-         // width: 1680px;
-        height: 948px;
+        height: 100%;;
         position: relative;
-        background: #ecb9a5;
-        // justify-content: flex-start;
-        // flex-flow: row nowrap;
-        padding: 120px;
-        // box-sizing:border-box;
-        
-        
-        
+                
     }
     
 
@@ -175,46 +169,64 @@
         position: relative;
         height: 100%;
         margin-right: 7.15%;
-
-        background: #6369b4;
+        background: #e2e8e8;;
         opacity: 0.5;
         
     }
     .profile-slider{
-        width:102px;
-        height: 12px;
+        width:84px;
+        height: 14px;
         position: absolute;
-        background: #a0b36c;
-        left:280px;
-        bottom: 30px;
+        // background: #a0b36c;
+        left:43%;
+        bottom: 3.48%;
+        justify-content: space-between;
+    }
+
+    .dot-small{
+        color:#ffffff;
+        background: #ffffff;
+        font-size: 6px;
+
+    }
+
+    .dot-big{
+        color:#ffffff;
+        background: #ffffff;
+        font-size: 12px;
     }
 
     .profile-right{
         flex:0 0 54.23%;
-        // flex:0 0 911px;
         position:relative;
         height:100%;
         justify-content: flex-start;
         align-items: stretch;
-        background: #b1ecc3; 
+        // background: #b1ecc3; 
         opacity: 0.5; 
     }
-
+    
     .profile-center{
         flex:0 0 90%;
-        // flex-direction: column;
         position: relative;
         max-height:100%;
-        background: #eed6d6;
-        // align-items: flex-start;
-        // justify-content: space-between;
+    }
+    
+    .profile-hr{
+        position: absolute;
+        width: 120px;
+        height: 2px;
+        top: 116px;
+        left:-26px;
+        border-bottom: 2px solid black;
+
     }
 
     .icon-bar{
         position: relative;
         flex:0 0 10%;
         flex-flow: column nowrap;
-        background: rgb(75, 75, 41);
+        // background: rgb(75, 75, 41);
     
     }
     .icons-list{
@@ -238,9 +250,7 @@
         width: 53.2%;
         list-style: none;
         justify-content: space-between;
-        // align-items: 
-        background: #d6dddd;  
-        // max-width: 437px;
+        
     }
     
     
@@ -249,7 +259,6 @@
     .profile-menu-item{
         flex:1;
         line-height:9px;
-        // margin-left: 10%;
                 
     }
 
@@ -296,42 +305,18 @@
 .third-screen{
     width: 100%;
     height: 1080px;
-    // position: relative;
-    background: #2b9696;
     padding-left: 120px;
     padding-right: 120px;
     align-items: stretch;
 
-    // .main-third{
-    // // flex-wrap: wrap;
-    // // max-width: 10%;
-    // // // padding-left: 120px;
-    // // // padding-right: 120px;
-    // // height: 100%;
-    // // justify-content: flex-start;
-    // // align-items: stretch;
-    // // // margin: 120px 120px;    
-    // // background: #a0b36c;  
-    // }
-
     
-    
-
-
     .third-left{
         flex:0 0 50%; 
-        // flex:1;
-        background: #a19e75; 
-        // position: relative;
         padding-left: 120px;
         padding-right: 170px;
         padding-top: 185px;
         padding-bottom: 230px;
-        // width: 465px;
-        // height: 125px;
-        
-        // margin: 120px 185px 120px 0;
-        
+                
     }
     .left-title{
         font-size: 60px;
@@ -345,45 +330,143 @@
         border-bottom: 2px solid black;
         width: 140px;
         height: 49px;
-        // background: rgb(196, 83, 83);
+    }
+    .left-first-block{
+        margin-top:80px;
+        width:620px;
+        height:139px;
+        justify-content: flex-start;
+        align-items: stretch;
+        
+    }
+    
+    .left-second-block{
+        margin-top:50px;
+        width:620px;
+        height:139px;
+        justify-content: flex-start;
+        align-items: stretch;
+        
+    }
+
+
+
+
+
+    .first-one{
+        flex: 1 1 35%;
+        background: #e2e8e8;
+        overflow:auto;
+        
+    }
+    .first-two{
+        flex: 1 1 65%;
+    }
+
+    .first-two-one{
+        margin-left:42px;
+        height: 100%;
+    }
+    .block-text{
+        line-height: 36px;
+        font-size: 24px;
+        color: #1a1a1d;
+
+
+    }
+    .block-date{
+        line-height: 40px;
+        font-size: 16px;
+        color: #77777e;
+        margin-top:36px;
+    }
+
+    .explorer{
+        margin-top: 63px;
+    }
+    .left-explorer{
+        font-size: 14px;
+        line-height: 30px;
+        letter-spacing: 2.8px;
+
+    }
+    .arrow{
+        margin-left:22px;
+    }
+
+    .for-play{
+        position: relative;
+        background: #b4d3d3;
+        height: 100%;;
+    }
+
+    .play{
+        position: absolute;
+        height:35px;
+        width:28px;
+        top:53px;
+        left:95px;
+        font-size: 34px;
+    }
+
+    .play-active{
+        color:#87bbbc;
 
     }
 
-    // .left-content{
-    //     width: 465px;
-    //     height: 125px;
-    //     font-size: 48px;
-    //     line-height: 79px;
-    //     font-weight: normal;
-    //     font-style: normal;
-    //     margin: 120px 185px 120px 0;
-    //     // position: absolute;
-    //     // right: 17%;
-    //     // top: 17%;
-    //     // padding-left: 120px;
-    //     // padding-right: 170px;
-        
-    //     // height: 100%;
-        
-    //     // width:58%;
-    //     background: #b38e6c;
-    // }
     .third-right{
         flex:0 0 50%; 
-        // flex:1;
-        background: #b36cb3;
+        background: #e2e8e8;
         
     }
 
+}
+.fourth-screen{
+    height:1146px;
+    position: relative;
+
+
+}
+
+.fourth-head{
+    margin-left:242px;
+    margin-right: 253px;
+    background: red;
+    height: 100px;
+    // justify-content: flex-start;
+    // align-items: stretch;
+
+}
+
+.head-title{
+    position: relative;
+    width:30%;
+    height: 100%;
+    // display: inline;
+    font-size: 60px;
+    line-height: 79px;
+    color:#1a1a1d;
+    background: yellow;
+
+}
+
+.head-text{
+    display: inline-block;
+    margin-left: 441px;
+    width:50%;
+    height: 100%;
+    background: rgb(94, 48, 94);
 
 
 
+}
 
-
-
-
-
-
+.set-hr{
+    // position: absolute;
+    // margin-top:
+    border-bottom: 2px solid black;
+    width: 140px;
+    height: 49px;
 
 
 }
